--- a/public/css/rsvp.css
+++ b/public/css/rsvp.css
@@ -62,8 +62,8 @@ p#questions { margin-top: 20px; color: #0E79AB; text-align: center; font-size: 1
 .rsvp-table .rsvp-column:first-of-type .rsvp-header { border-top-left-radius: 10px; }
 .rsvp-table .rsvp-column:last-of-type { border-top-right-radius: 10px; border-bottom-right-radius: 10px; }
 .rsvp-table .rsvp-column:last-of-type .rsvp-header { border-top-right-radius: 10px; }
-.rsvp-table .rsvp-column .rsvp-header { height: 40px; padding: 0px 10px; line-height: 40px; font-size: 14pt; }
-.rsvp-table .rsvp-column .rsvp-header .badge { margin-top: 11px; }
+.rsvp-table .rsvp-column .rsvp-header { position: relative; height: 40px; padding: 0px 10px; line-height: 40px; font-size: 14pt; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.rsvp-table .rsvp-column .rsvp-header .badge { position: absolute; top: 11px; right: 10px; }
 .rsvp-table .rsvp-column .rsvp-body { overflow: scroll; height: 460px; }
 .rsvp-table .rsvp-column .rsvp-guest { height: 30px; padding: 0px 5px; line-height: 30px; background-color: white; }
 .rsvp-table .rsvp-column .rsvp-guest:nth-child(odd) { background-color: rgba(10, 87, 123, 0.1); }
